Fixed z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,6 +60,7 @@ a{
     flex-wrap: wrap;
     padding:10px;
     position: fixed;
+    z-index: 2;
 
 }
 
